[gd_scene load_steps=7 format=3 uid="uid://dvl8drwnjj3bf"]

[ext_resource type="Script" uid="uid://biy37hlg4h7la" path="res://scenes/ui/map_edit/hud/buildings_list/list_building.gd" id="1_g0e8n"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qn0to"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4iqv"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qn0to"]

[sub_resource type="LabelSettings" id="LabelSettings_anv13"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_73lgc"]
font_size = 10

[node name="ListBuilding" type="Button"]
custom_minimum_size = Vector2(100, 30)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -550.0
offset_bottom = -320.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0e8n")

[node name="MainPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qn0to")

[node name="ControlPanel" type="PanelContainer" parent="MainPanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e4iqv")

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanelContainer/ControlPanel"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="IconContainer" type="MarginContainer" parent="MainPanelContainer/ControlPanel/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="IconPanel" type="PanelContainer" parent="MainPanelContainer/ControlPanel/HBoxContainer/IconContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qn0to")

[node name="IconTexture" type="TextureRect" parent="MainPanelContainer/ControlPanel/HBoxContainer/IconContainer/IconPanel"]
layout_mode = 2
expand_mode = 1

[node name="LabelContainer" type="MarginContainer" parent="MainPanelContainer/ControlPanel/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanelContainer/ControlPanel/HBoxContainer/LabelContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="MainPanelContainer/ControlPanel/HBoxContainer/LabelContainer/VBoxContainer"]
layout_mode = 2
text = "送電スタンド"
label_settings = SubResource("LabelSettings_anv13")

[node name="CostLabel" type="Label" parent="MainPanelContainer/ControlPanel/HBoxContainer/LabelContainer/VBoxContainer"]
layout_mode = 2
text = "コスト1"
label_settings = SubResource("LabelSettings_73lgc")
